# amplifier

./: QUICKSTART.md  README.md  TESTING.md
amplifier/scenarios/web_to_md/: README.md  __init__.py  __main__.py  main.py  pyproject.toml
forge/: .gitignore  CLAUDE_CODE_PROVIDER.md  CUSTOM_COMPOSITION_TEST_RESULTS.md  ELEMENT_CATALOG.md  EXECUTIVE_SUMMARY.md  MANIFEST.in  MEMORY_TEST_RESULTS.md  MULTI_AGENT_TEST_REPORT.md  ORTHOGONAL_ELEMENTS_DESIGN.md  README.md  REFACTORING_PLAN.md  TESTING.md  TESTING_RESULTS.md  TEST_SUMMARY.md  USAGE_DEMO.md  pyproject.toml  test_cache_performance.py  test_custom_composition.py  test_element_loader.py  test_memory_comprehensive.py  test_results_element_loader.json
forge/archive/: README.md
forge/archive/legacy-docs/: QUICKSTART.md  SYNTHESIS.md
forge/archive/test-results/: COMPOSITION_SYSTEM_TEST_RESULTS.md  ELEMENT_SYSTEM_TEST_REPORT.md  MEMORY_TEST_SUMMARY.txt
forge/docs/: COMMANDS.md  CUSTOM_COMPOSITIONS.md  WORKFLOWS.md  element-types.md  memory-system.md
forge/docs/providers/: README.md  claude-code.md
forge/examples/: amplifier-workflow.yaml  composition_demo.py  custom-composition-example.yaml  demo.py  example-composition.yaml  quickstart.md  spec-kit-workflow.yaml
forge/presets/rapid-prototype/: composition.yaml
forge/scripts/: populate_from_amplifier.py  test_orchestrator.py
forge/src/forge/: __init__.py  utils.py
forge/testing/: aggregate_metrics.json  analysis_report.md  improvement_plan.md
forge/testing/profile_evaluation/: task_01_greenfield_project.md  task_03_research_synthesis.md  task_10_migration.md  task_template.md
forge/tests/: COMPOSITION_TEST_REPORT.md  __init__.py  test_claude_code_provider.py  test_composition_system.py  test_e2e_cli.py  test_elements.py  test_memory.py
working/: .env.example  AGENTS.md  CLAUDE.md  FILE_ORGANIZATION_ANALYSIS.md  Makefile  PROFILES_TESTING_RESULTS.md  README.md  SUPPORT.md  amplify.sh  pyproject.toml  ruff.toml
working/.ai/docs/: ai-context.md  automation.md  notifications.md  philosophy.md
working/.claude/: README.md  active-profile  settings.json
working/.claude/agents/: amplifier-cli-architect.md  analysis-engine.md  content-researcher.md  contract-spec-author.md  database-architect.md  graph-builder.md  knowledge-archaeologist.md  layout-architect.md  modular-builder.md  module-intent-architect.md  performance-optimizer.md  post-task-cleanup.md  subagent-architect.md
working/.claude/commands/: modular-build.md  review-code-at-path.md  test-webapp-ui.md  transcripts.md  ultrathink-task.md
working/.claude/tools/: hook_precompact.py  hook_session_start.py  hook_stop.py  memory_cli.py
working/.devcontainer/: OPTIMIZING_FOR_CODESPACES.md  POST_SETUP_README.md  README.md  devcontainer.json  post-create.sh
working/.smoke_test_data/: test_code.py
working/ai_context/: DESIGN-PHILOSOPHY.md  IMPLEMENTATION_PHILOSOPHY.md  MODULAR_DESIGN_PHILOSOPHY.md  README.md
working/ai_context/claude_code/: CLAUDE_CODE_COMMON_WORKFLOWS.md  CLAUDE_CODE_SETTINGS.md  CLAUDE_CODE_SLASH_COMMANDS.md  CLAUDE_CODE_SUBAGENTS.md
working/ai_context/module_generator/: CONTRACT_SPEC_AUTHORING_GUIDE.md
working/ai_context/reference/: LLM_API_LOOKUP.md  README.md
working/ai_working/: README.md  adaptive_evolution_analysis.md
working/ai_working/dot_to_mermaid/: README.md  cli.py  models.py
working/amplifier/: __init__.py
working/docs/: MEMORY_SYSTEM.md  WORKSPACE_PATTERN.md  WORKTREE_VENV_MANAGEMENT.md
working/profiles/: README.md
working/scenarios/: README.md
working/tests/: test_parallel_execution.py
working/tools/: build_git_collector_files.py  collect_files.py  dag_loader.py  inspect_compact.py  transcript_formatter.py  worktree_manager.py
(+550 files in other folders)
